# Base-Async-Microservices

./: .gitignore  README.md
apps/analytics/: .env.example  Cargo.toml
apps/analytics/docker/: Dockerfile
apps/analytics/src/: handler.rs  main.rs
apps/analytics/src/config/: app.rs  consumer.rs  logging.rs  mod.rs  settings.rs
apps/gateway/: .env.example  pyproject.toml
apps/gateway/docker/: Dockerfile
apps/gateway/src/: main.py
apps/gateway/src/config/: queues.py  settings.py
apps/gateway/src/orders/: router.py  schemas.py  service.py
apps/gateway/src/shared/: analytics.py  logging.py  routers.py  utils.py
apps/orders/: Cargo.toml
apps/orders/docker/: .dockerignore
apps/orders/src/config/: consumer.rs  logging.rs  mod.rs  settings.rs  web.rs
apps/orders/src/core/: mod.rs  router.rs  schemas.rs  services.rs  state.rs
